--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -46,4 +49,6 @@ dependencies {
 //    kapt("androidx.room:room-compiler:2.5.0")
 
     implementation "androidx.paging:paging-runtime:3.1.1"
+
+    implementation("androidx.fragment:fragment-ktx:1.5.5")
 }
