--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+    id('kotlin-kapt')
+    id('dagger.hilt.android.plugin')
 }
 
 android {
-    namespace 'com.example.bidirectionalpagination'
+    namespace 'github.preeti5sharon.bipagination'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.bidirectionalpagination"
+        applicationId "github.preeti5sharon.bipagination"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -46,9 +49,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation("androidx.room:room-runtime:2.5.0")
-//    kapt("androidx.room:room-compiler:2.5.0")
+    kapt("androidx.room:room-compiler:2.5.0")
+    implementation("androidx.room:room-ktx:2.5.0")
 
     implementation "androidx.paging:paging-runtime:3.1.1"
 
     implementation("androidx.fragment:fragment-ktx:1.5.5")
+
+
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+
 }
